added notebook with description for visualization

--- a/orthogonality testing.ipynb
+++ b/orthogonality testing.ipynb
@@ -13,7 +13,9 @@
    "source": [
     "The modes of a system will not always be orthogonal because some of the signal leaks out of the system. Let's use the Potapov analysis for a specific example to determine when the orthogonality approximation can be made.\n",
     "\n",
-    "The example used here is example 3 in our code, which corresponds to figure 7 in our paper. This example is formed by two inter-linked cavities with two inputs and outputs."
+    "The example used here is example 3 in our code, which corresponds to figure 7 in our paper. This example is formed by two inter-linked cavities with two inputs and outputs.\n",
+    "\n",
+    "In the notebook \"Bi-orthogonality testing\" we show how this issue can be avoided using a bi-orthogonal basis."
    ]
   },
   {
