--- a/perturbing_z.ipynb
+++ b/perturbing_z.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -573,7 +573,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAmsAAAJPCAYAAAAjcZPEAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3X2MZfdZH/DvEwJiKME4leJUdhAg4tQBBHWKQ5WWjKCe\nIUF1kq6UBqllKREj8dJYYoTWBqTsfxBU89YSJDdqmKBAFAgmpqS53igM7UqkMQ0hIXESq5DIdolD\nSEEqXVV2+fWPuTaTybzd13PuPZ+PNNqZc++dOXt8fPY793me36nWWgAA6KdndL0DAACcTFgDAOgx\nYQ0AoMeENQCAHhPWAAB6TFgDAOixuYS1qrquqn69qh6qqo9U1Yur6vqqeqCqPl5Vo6q67tDz766q\nh8fP35rHPgAArKN5vbP280ne1Vq7Jck3JflYkruSvKe19oIk701yd5JU1QuTvDrJLUleluSNVVVz\n2g8AgLUyc1irqq9I8k9aa29Oktbak621v0ryiiR746ftJXnl+PM7krxt/LxPJnk4yW2z7gcAwDqa\nxztrX5Pks1X15qr6QFXdW1VfluSG1trjSdJa+3SS54yff2OSRw69/rHxNgAAjphHWHtmkluT/GJr\n7dYkf52DEujR+1i5rxUAwISeOYfv8WiSR1prfzD++h05CGuPV9UNrbXHq+q5ST4zfvyxJM879Pqb\nxtu+QFUJeADAymitzb0Pf+Z31salzkeq6ubxpu9I8pEk9yf53vG2i0neOf78/iSvqaovqaqvSfJ1\nSd5/yvf3scSP17/+9Z3vw9A+HHPHfAgfjrljPoSPRZnHO2tJ8rokb62qL07yJ0n+dZIvSvL2qvq+\nJJ/KwQRoWmsfraq3J/lokieS/GBb5N8QAGCFzSWstdb+KMm3HPPQPz3h+T+Z5Cfn8bMBANaZOxjw\neTY3N7vehcFxzJfPMV8+x3z5HPP1UX2uQFaVCikAsBKqKq2PAwYAACyOsAYA0GPCGgBAjwlrAAA9\nJqwBAPSYsAYA0GPCGgBAjwlrAAA9JqwBAPSYsAYA0GPCGgBAjwlrAAA9JqwBAPSYsAYA0GPCGgBA\njwlrAAA9JqwBAPSYsAYA0GPCGgBAjwlrAAA9JqwBAPSYsAYA0GPCGgBAjwlrAAA9JqwBAPSYsAYA\n0GPCGgBAjwlrAAA9JqwBAPSYsAYA0GPCGgBAjwlrAAA9JqwBAPSYsAYA0GPCGgBAjwlrAAA9JqwB\nAPSYsAYA0GPCGgBAjwlrAAA9JqwBsFZGo1G2ti5ka+tCRqNR17sDM6vWWtf7cKKqan3ePwD6ZTQa\n5VWvuphr196QJNnYuJT77tvL9vZ2x3vGEFRVWms19+/b5zAkrAEwia2tC7ly5Y4kF8db9nL77ffn\ngQfe0eVuMRCLCmvKoAAAPfbMrncAAOZld3cnV69ezLVrB19vbFzK7u5etzsFM1IGBWCtjEaj3HPP\nvUkOwpt+NZZFzxrQCf/wAZyPsAYsnck6gPMT1oClM1kHcH6mQQEABkhYA060u7uTjY1LSfaS7I0n\n63a63q2lsho+0DVlUOBUQx4w0LMHTELPGsCS6dkDJqFnDQBggNzBAOAEVsMH+kAZFOAUQ+7ZAyaj\nZw2AhRNOYXrCGgALZfoVZiOsAbBQpl9hNqZBAQAGSFiDKVnZnnXjjhXQT8qgMAW9PawrAwYwPT1r\n0CN6ewA4Ss8aAMAAuYMBTMHK9gAsizIoTElvDwCH6VkDgBXjl7phEdYAYIWYGh8eYQ0AVoip8eEx\nDQoAMEDCGieyQj/A9NwRgnlRBuVYei0AZmfAYFj0rLFUei0AYDJ61gAABsgdDDiWFfoBoB+UQTmR\nXguA1eGa3T09awDAsQyF9YOwBgAcy1BYPxgwAAAYIAMGALDiDIWtN2VQTqRZFWB1uGZ3T88aS6VZ\nFQAm0/uetap6RlV9oKruH399fVU9UFUfr6pRVV136Ll3V9XDVfVQVW3Nax+Yn3vuuXcc1C4mOQht\nT/3GBgAszzwHDO5M8tFDX9+V5D2ttRckeW+Su5Okql6Y5NVJbknysiRvrKq5p1AAgHUwl7BWVTcl\neXmSNx3a/IokT3U37iV55fjzO5K8rbX2ZGvtk0keTnLbPPaD+dnd3cnGxqUc/KfbGzer7nS9WwAr\nZTQaZWvrQra2LmQ0GnW9O6yoeU2D/mySH01y3aFtN7TWHk+S1tqnq+o54+03Jvn9Q897bLyNHtne\n3s599+0dalbVrwYwiaO9v1evXtT7y1RmDmtV9V1JHm+tfbCqNk95qkmBFbO9ve2iAjClz+/9Ta5d\nO9jmusqk5vHO2kuS3FFVL0+ykeRZVfUrST5dVTe01h6vqucm+cz4+Y8led6h19803nasy5cvP/35\n5uZmNjc357DLAACz2d/fz/7+/sJ/zlyX7qiqlybZba3dUVU/neQvWmtvqKpLSa5vrd01HjB4a5IX\n56D8eSXJ849bo8PSHQCsKksgDc9KrLN2JKw9O8nbc/Au2qeSvLq19pfj592d5LVJnkhyZ2vtgRO+\nn7AGwMqyUO2wrERYmzdhjT5zEQbgMGENekR5A4CjhDXoka2tC7ly5Y48NeWV7OX22+/PAw+8o8vd\nAqBDvb/dFAAA8yeswRTc4YF1ZcV96B9lUJiSAQPWjV5MmI2eNQAWSi8mzEbPGgDAAM3rRu4ArLjd\n3Z1cvXox164dfH3Qi7nX7U4ByqAA/C29mDA9PWsAHRBegPMS1gCWzHQkMAlhDWDJTEcCkzANCgAw\nQMIacKohr2jvThVAHyiDAifSs2XAADg/PWvA0unZAjg/PWsAAAPkDgbAiaxoD9A9ZVDgVHq2AM5H\nzxoAnINfMOiKsAYAZzDBTJeENQA4gwlmumQaFABggIQ1emHIq+QD8+OuE6wjZVA6p8cEmCcDBnRF\nzxprS48JAOtAzxoAwAC5gwGds0o+AJxMGZRe0GMCcDbXyn7TswYAA2YYq/+ENQAYMMNY/WfAAABg\ngAwYAMAKMIw1XMqgA6VJFWD1uHb3m5415kaTKgDMn7DG3GhSBYD5M2AAADBAwtoA7e7uZGPjUpK9\nJHvjJtWdrncLgDOMRqNsbV3I1taFjEajrneHJVEGHShNqgCrRb9x/+lZA4AB02/cf3rWAAAGyKK4\nALACLIo7XMqgALAi9Bv3m5411poLEACrTlhjbZlwAmAdCGusLRNOAKwD06AAAAMkrNE5d1QA5skq\n/6wbZVB6wYABMA96YOmSnjUAOIMeWLqkZw0AYIDcwQCAtWGVf9aRMigAa0UPLF3RswZ0wj98AOcj\nrAFLZ7IO4PyENWDpTNYBnJ9pUIAOWGAV6JppUOBEQ5+sO1oGvnr1ojIwsHTKoMCphjxgoAwMTGJR\nZVDvrAGn2t7eHlRAA+gbYQ3gBEMvAwP9oAwKcIohl4GByVi6AwCgxyzdAcDCWaoE+sc7awAkcccK\nmJUyKAALZakSmI0yKPSMchEAy2DpDpiCle1ZR5YqgX5SBoUpKBexrixVAtNzBwMAFs4dK6B/hDWY\ngnIRAMuiDApTUi4C4DBLdwDAivFL3bAIawCwQiwyPDzCGgCsEFPjw2NRXACAARLWOJEV+gGmt7u7\nk42NS0n2kuyNp8Z3ut4tVpAyKMfSawEwOwMGw6JnjaXSawEAk9GzBgAwQO5gwLGs0A8A/aAMyon0\nWgCsDtfs7ulZAwCOZSisH4Q1AOBYhsL6obcDBlV1U1W9t6o+UlUfrqrXjbdfX1UPVNXHq2pUVdcd\nes3dVfVwVT1UVVuz7gMAwLqaxzTok0l+pLX29Un+UZIfqqq/n+SuJO9prb0gyXuT3J0kVfXCJK9O\nckuSlyV5Y1XNPYUCwFBYgHe9zRzWWmufbq19cPz5/07yUJKbkrwiB2dNxn++cvz5HUne1lp7srX2\nySQPJ7lt1v1g/tzBAGA1bG9v5777Dkqft99+v361NTPXnrWq+uok+0m+IckjrbXrDz32udbas6vq\n3yX5/dbar463vynJu1prv3nM99Oz1hHNqgAwmd72rD2lqr48yW8kuXP8DtvRlCV1rZB77rl3HNQu\nJjkIbU+NhAMAyzOXRXGr6pk5CGq/0lp753jz41V1Q2vt8ap6bpLPjLc/luR5h15+03jbsS5fvvz0\n55ubm9nc3JzHLgMAzGR/fz/7+/sL/zlzKYNW1VuSfLa19iOHtr0hyedaa2+oqktJrm+t3TUeMHhr\nkhcnuTHJlSTPP67eqQzaHWVQAJhMb9dZq6qXJPkvST6cg1JnS/JjSd6f5O05eBftU0le3Vr7y/Fr\n7k7y2iRP5KBs+sAJ31tY65DVsAFm4zo6LL0Na4skrAGwqlQohkdYA4AV4q4Cw9P7aVAAAOZvLtOg\nAMDn293dydWrF3Pt2sHXB3cV2Dv9RXAMZVAAWBADBsOiZw16xkUYgMOENegRU14AHCWsQY+Y8gLg\nKNOgACzcaDTK1taFbG1dyGg06np3gJgGhamY8mIdHS3vX716UXkfekAZFKZkwIB1o7wPs1lUGdQ7\nazCl7e1tAQ2AhRPWAEiivA99pQwKwNOU92F6lu4A6IDwApyXsAawZBY/BiYhrAEsmelIYBIWxQUA\nGCBhDTjVkFe0393dycbGpSR7SfbG05E7Xe8WMDDKoMCJ9GwZMADOT88asHR6tgDOT88aAMAAuYMB\ncCIr2gN0TxkUOJWeLYDz0bMGAOfgFwy6IqwBwBlMMNMlYQ0AzmCCmS6ZBgUAGCBhjV4Y8ir5wPy4\n6wTrSBmUzukxAebJgAFd0bPG2tJjAsA60LMGADBA7mBA56ySDwAnUwalF/SYAJzNtbLf9KwBwIAZ\nxuo/YQ0ABswwVv8ZMAAAGCADBgCwAgxjDZcy6EBpUgVYPa7d/aZnjbnRpAoA8yesMTeaVAFg/gwY\nAAAMkAGDAdKkCgCrQxl0oDSpAqwe1+5+07MGAANmOKz/hDUAGDDDYf1nwAAAYIAMGADACjAcNlzK\noPSCplmAs7lW9pueNdaWplkA1oGwxtrSNAvAOjBgAAAwQMIandvd3cnGxqUke0n2xk2zO13vFrCi\nRqNRtrYuZGvrQkajUde7AzNTBqUXNM0C86AHli7pWQOAM+iBpUt61gAABsiiuACsDQvHso6UQQFY\nK3pg6YqeNaAT/uEDOB9hDVg6k3UA5yesAUtnsg7g/EyDAgAMkLAGnMjdJayGD3RPGRQ41ZAHDPTs\nAZPQswawZHr2gEnoWQMAGCB3MAA4gdXwgT5QBgU4xZB79oDJ6FkDYOGEU5iesAbAQpl+hdkIawAs\nlOlXmI1pUACAARLWYEpWtmfduGMF9JMyKExBbw/ryoABTE/PGvSI3h4AjtKzBgAwQO5gAFOwsj0A\ny6IMClPS2wOcxXViWPSsAcAKMYg0PMIaAKwQg0jDY8AAAGCADBgAwAIYRGJelEE5kcZYgNm4jg6L\nnjWWSmMsAExGWGOpNMYCwGTWbsCgqr6zqj5WVZ+oqktd7QcAQJ91MmBQVc9I8u+TfEeS/5nkwap6\nZ2vtY13sD19IYywA9ENX76zdluTh1tqnWmtPJHlbkld0tC8cY3t7O/fdd1D6vP32+/WrAfTcaDTK\n1taFbG1dyGg06np3mKNOetaq6kKS7dbazvjrf5nkttba6448T88aAJzBUFg/LKpnzTprALDi7rnn\n3nFQOxgKu3btYJuwth66CmuPJfmqQ1/fNN72BS5fvvz055ubm9nc3FzkfgEAnMv+/n729/cX/nO6\nKoN+UZKP52DA4M+SvD/Jd7fWHjryPGVQADiDMmg/rNXSHa21/5fkh5M8kOQjSd52NKjRPc2qAKvB\nUNh6sygux/JbGgBMxh0MWCp3MACAyaxVGRQAgPMR1jjW7u5ONjYuJdlLsje+g8FO17sFsFL0/jIP\nyqCcaDQa5Z577k1yEN70qwGcn97f4dGzBgArRO/v8OhZAwAYILebAoAF2N3dydWrF3Pt2sHXB72/\ne93uFCtJGRQAFkTv77DoWYOecREG4DBhDXrElBcARwlr0COmvAA4yjQoAMAACWswBXd4YF1ZcR/6\nRxkUpmTAgHWjFxNmo2cNgIXSiwmz0bMGADBA7mAAQBIr7kNfKYMC8DS9mDA9PWsAHRBegPMS1gCW\nzHQkMAlhDWDJTEcCkzANCnTCIqkA3TINCpzoaBnw6tWLgyoDmo4E+kAZFDiRMqABA+D8FlUG9c4a\nwCm2t7cFNKBTwhpwImVAgO4pgwKnUgYEOB9LdwDAOfgFg64IawBwBgsZ0yVhDQDOYIKZLlkUFwBg\ngIQ1esEq+cA87O7uZGPjUpK9JHvjCeadrncLZqIMSuf0mADzZMCAruhZY23pMQFgHehZAwAYIHcw\noHNWyQeAkymD0gt6TABYdXrWAGDg/GLbb8IaAAyYyfn+E9YAYMBMzvefaVAAgAES1gbKHQMAVou7\nMwyXMugA6XsAWE0GDPpNzxpzo+8BAOZPzxoAwAC5g8EAuWMAAKwOZdCB0vcAsHpcu/tNzxoADJjh\nsP4T1gBgwAyH9Z8BAwCAATJgAAArwHDYcCmDAsCKMGDQb3rWWGsuQACsOmGNtWXCCYB1IKyxtkw4\nAbAOTIMCAAyQsEbndnd3srFxKclekr3xhNNO17sFrKjRaJStrQvZ2rqQ0WjU9e7AzJRB6QUDBsA8\n6IGlS3rWAOAMemDpkp41AIABcgcDANaGVf5ZR8qgAKwVPbB0Rc8a0An/8AGcj7AGLJ3JOoDzE9aA\npTNZB3B+pkEBOmCBVaBrpkGBEw19su5oGfjq1YvKwMDSKYMCpxrygIEyMDCJRZVBvbMGnGp7e3tQ\nAQ2gb4Q1gBMMvQwM9IMyKMAphlwGBiZj6Q4AFk44hekJawAslEWQYTbCGgALZfoVZmNRXACAARLW\nYEpWtmfd7O7uZGPjUpK9JHvj6dedrncLBk8ZFKagt4d1ZcAApqdnDXpEbw8AR+lZAwAYIHcwgClY\n2R6AZVEGhSnp7QHgMD1rALBi/FI3LMIaAKwQU+PDI6wBwAoxNT48vZwGraqfrqqHquqDVfWOqvqK\nQ4/dXVUPjx/fOrT91qr6UFV9oqp+bpafDwCw7mZduuOBJF/fWvvmJA8nuTtJquqFSV6d5JYkL0vy\nxqp6Kmn+UpLXttZuTnJzVXk/uKes0A8wPXeEYF7mVgatqlcmudBa+1dVdVeS1lp7w/ix/5zkcpJP\nJXlva+2F4+2vSfLS1toPnPA9lUE7otcCYHYGDIZlUWXQea6z9n1Jfm38+Y1Jfv/QY4+Ntz2Z5NFD\n2x8db6dn7rnn3nFQO+i1uHbtYJsLDcD5bW9vu24yszPDWlVdSXLD4U1JWpIfb6399vg5P57kidba\nrx3zLQAAmNKZYa21dvtpj1fV9yZ5eZJvP7T5sSTPO/T1TeNtJ20/0eXLl5/+fHNzM5ubm2ftMnNg\nhX4AON3+/n729/cX/nNm6lmrqu9Mck+Sb2ut/cWh7S9M8tYkL85BmfNKkue31lpVvS/J65I8mOR3\nkvxCa+3dJ3x/PWsd0msBsDpcs7vXy3XWqurhJF+S5Kmg9r7W2g+OH7s7yWuTPJHkztbaA+PtL0ry\ny0m+NMm7Wmt3nvL9hTUAOIOhsH7oZVhbNGENAM5mAd5+6OWiuAAALNY8l+4AADpgKGy9KYNyIs2q\nAKvDNbt7etZYKs2qADAZYY2l0qwKAJMxYAAAMEAGDDiWZlUA6AdlUE6kWRVgNq6jw6JnDQBWiEGt\n4RHWAGCFGNQaHgMGAAADZMAAABbAoBbzogwKU9I4DJzFdWJY9KxBj2gcBuAoYQ16ROMwAEcZMAAA\nGCBhDaawu7uTjY1LSfaS7I0bh3e63i2Y2Wg0ytbWhWxtXchoNOp6d4Aog8LUNA6zbvRiwmz0rAGw\nUHoxYTZ61gAABsiiuAAksYgr9JUyKABP04sJ09OzBtAB4QU4L2ENYMlMRwKTENYAlsx0JDAJ06AA\nAAMkrAGnGvKK9u5UAfSBMihwIj1bBgyA89OzBiydni2A89OzBgAwQO5gAJzIivYA3VMGBU6lZwvg\nfPSsAcA5+AWDrghrAHAGE8x0SVgDgDOYYKZLpkEBAAZIWKMXhrxKPjA/7jrBOlIGpXN6TIB5MmBA\nV/Sssbb0mACwDvSsAQAMkDsY0Dmr5APAyZRB6QU9JgBnc63sNz1rADBghrH6T1gDgAEzjNV/BgwA\nAAbIgAEArADDWMOlDDpQmlQBVo9rd7/pWWNuNKkCwPwJa8yNJlUAmD8DBgAAA2TAYIA0qQLA6lAG\nHShNqgCrx7W73/SsAcCAGQ7rP2ENAAbMcFj/GTAAABggAwYAsAIMhw2XMii9oGkW4Gyulf2mZ421\npWkWgHUgrLG2NM0CsA4MGAAADJCwRud2d3eysXEpyV6SvXHT7E7XuwWsqNFolK2tC9naupDRaNT1\n7sDMlEHpBU2zwDzogaVLetYA4Ax6YOmSnjUAgAGyKC4Aa8PCsawjZVAA1ooeWLqiZw3ohH/4AM5H\nWAOWzmQdwPkJa8DSmawDOD/ToAAAAySsASdydwmr4QPdUwYFTjXkAQM9e8Ak9KwBLJmePWASetYA\nAAbIHQwATmA1fKAPlEEBTjHknj1gMnrWAFg44RSmJ6wBsFCmX2E2whoAC2X6FWZjGhR6xmKpACyD\naVCYwtFy0dWrF5WLWHmmX6GflEFhCspFrCsDBjC9RZVBvbMGwNO2t7cFNOgZYQ2moFwEwLLMZcCg\nqnar6m+q6tmHtt1dVQ9X1UNVtXVo+61V9aGq+kRV/dw8fj4s2/b2du6776D0efvt9+tXA2BhZu5Z\nq6qbkrwpyQuSvKi19rmquiXJryb5liQ3JXlPkue31lpV/bckP9xae7Cq3pXk51trx47S6VkDYJXp\nARyWPi/d8bNJfvTItlckeVtr7cnW2ieTPJzktqp6bpJntdYeHD/vLUleOYd9AIBeeWpq/MqVO3Ll\nyh151asuWuaHqcwU1qrqjiSPtNY+fOShG5M8cujrx8bbbkzy6KHtj463AcBaueeee8fL+1xMcrDU\nz1PvssEkzhwwqKorSW44vClJS/ITSX4sye2L2TUAAM4Ma621Y8NYVX1Dkq9O8kdVVTnoTftAVd2W\ng3fSvurQ028ab3ssyfOO2X6iy5cvP/355uZmNjc3z9plAOicqfH1t7+/n/39/YX/nLktiltVf5rk\n1tba/6qqFyZ5a5IX56DMeSV/O2DwviSvS/Jgkt9J8guttXef8D0NGHRIYyzAbFxHh6X3N3Kvqj9J\n8g9ba58bf313ktcmeSLJna21B8bbX5Tkl5N8aZJ3tdbuPOV7CmsdOXo7pY2NS5anAIBT9D6sLYKw\n1h23UwKAyfR56Q4AABbE7aY4lsZYAOgHZVBOpDEWYHW4ZndPzxoAcCxDYf0grAEAxzIU1g8GDAAA\nBsiAAQCsOENh600ZlBNpVgVYHa7Z3dOzxlJpVgWAyQhrLJVmVQCYjAEDAIABEtY41u7uTjY2LiXZ\nS7I3blbd6Xq3AFbKaDTK1taFbG1dyGg06np3WFHKoJxIsyrA9PT+Do+eNQBYIXp/h0fPGgDAAFkU\nFwAWwEK1zIsyKAAsiN7fYdGzBj3jIgzAYcIa9IgpLwCOEtagR0x5AXCUaVAAFs4irtA/pkFhCqa8\nWEdHy/tXr15U3oceUAaFKRkwYN0o78NsFlUG9c4aTGl7e1tAA2DhhDUAkijvQ18pgwLwNOV9mJ6l\nOwAAeszSHQAdsJQF0DXvrAGcwJ0qgEkogwIsmaUsgEkogwKdUAYE6JalO4ATDX1Fe0tZAH2gDAqc\nSBnQUhbA+bmDAUAH3KkC6JqwBpxIGRCge8qgwKmUAQHOx9IdAHAOfsGgK8IaAJzBQsZ0SVgDgDOY\nYKZLFsUFABgg06AArA0TzKwjZVAA1ooBA7qiZw0AoMf0rAEADJCwBgDQY8IaAECPCWsAAD0mrAEA\n9JiwBgDQY8IaAECPCWsAAD0mrAEA9JiwBgDQY8IaAECPCWsAAD0mrAEA9JiwBgDQY8IaAECPCWsA\nAD0mrAEA9JiwBgDQY8IaAECPCWsAAD0mrAEA9JiwBgDQY8IaAECPCWsAAD0mrAEA9JiwBgDQY8Ia\nAECPCWsAAD0mrAEA9JiwBgDQY8IaAECPCWsAAD0mrAEA9JiwBgDQY8IaAECPCWsAAD0mrAEA9Jiw\nBgDQY8IaAECPCWsAAD0mrAEA9NjMYa2q/k1VPVRVH66qnzq0/e6qenj82Nah7bdW1Yeq6hNV9XOz\n/nwAgHU2U1irqs0k/yzJN7bWvjHJvx1vvyXJq5PckuRlSd5YVTV+2S8leW1r7eYkN1fV9iz7wHzt\n7+93vQuD45gvn2O+fI758jnm62PWd9Z+IMlPtdaeTJLW2mfH21+R5G2ttSdba59M8nCS26rquUme\n1Vp7cPy8tyR55Yz7wBz5n3v5HPPlc8yXzzFfPsd8fcwa1m5O8m1V9b6q+t2qetF4+41JHjn0vMfG\n225M8uih7Y+OtwEAcIxnnvWEqrqS5IbDm5K0JD8xfv31rbVvrapvSfLrSb52ETsKADBE1Vqb/sVV\n70ryhtba742/fjjJtyb5/iRprf3UePu7k7w+yaeS/G5r7Zbx9tckeWlr7QdO+P7T7xwAwJK11urs\nZ03mzHfWzvBbSb49ye9V1c1JvqS19hdVdX+St1bVz+SgzPl1Sd7fWmtV9VdVdVuSB5N8T5JfOOmb\nL+IvDACwSmYNa29O8h+r6sNJ/m8Owldaax+tqrcn+WiSJ5L8YPvbt/B+KMkvJ/nSJO9qrb17xn0A\nAFhbM5VBAQBYrE7vYFBV11fVA1X18aoaVdV1xzzn5qr6w6r6wPjPv6qq15339Xy+8x6zqrquqn59\nvKjxR6rqxePtr6+qR8f/PT5QVd+53L/B6pnDMXeeT2iCY/7Jqvqj8bXl/Ye2O88nNIdj7jyf0CTH\nrKqeMT6X7z+0zXk+oTkc86nO865vN3VXkve01l6Q5L1J7j76hNbaJ1pr/6C1dmuSFyX56yS/ed7X\n8wXOe8x+Pgdl6luSfFOShw499jOttVvHH8rYZ5v1mDvPJ3feY/Y3STbH15jbjjzmPJ/MrMfceT65\nSY7ZnTmr5eToAAADAElEQVRoTTrKeT6ZWY/5dOd5a62zjyQfS3LD+PPnJvnYGc/fSvJfp329j/Md\nsyRfkeR/nPD61yfZ7frvsUofczjmzvMFHPPxY3+a5O8es915vvxj7jxf3DG/KcmVJJtJ7j+03Xm+\n/GM+1Xne9Ttrz2mtPZ4krbVPJ3nOGc//F0l+bYbXc75j9jVJPltVbx6/hXtvVW0cevyHq+qDVfUm\npYpzmfWYO88nd95j1pJcqaoHq+r7jzzmPJ/MrMfceT658x6zn03yozk49kc5zycz6zGf6jxfeFir\nqit1cOP2pz4+PP7zjmOefuK0Q1V9cZI7crDw7klMS2Qux/yZSW5N8ovtoPz8f3Lw1m2SvDHJ17bW\nvjnJp5P8zCL+Dqtmwcf86BI2zvPM7drykvHxfnmSH6qqfzze7jw/xoKP+XlfPyizHvOq+q4kj7fW\nPpiDa8nh64nz/BgLPuZnvv44sy7dcabW2u0nPVZVj1fVDa21x+vgvqGfOeVbvSzJf2+t/fmhbZO8\nfjDmcMwfTfJIa+0Pxl//RpJL4+99+Pj/hyS/PafdXmmLPOZJPu08/0LzuLa01v5s/OefV9V9SW5L\nctV5frxFHvO4nh9rDsf8JUnuqKqXJ9lI8qyqektr7Xuc58db5DHPlOd512XQ+5N87/jzi0neecpz\nvzufXwKd9PUcOPOYjd+ifaQOFjpOku/IuElyfHI95Z8n+eOF7en6mOmYn+f1fIEzj1lVfVlVffn4\n87+Tg57YPx5/7Tyf3EzH/Dyv5wuc59ryY621r2qtfW2S1yR57zg0OM+nM9MxP8/rj9Vxo96zk7wn\nyceTPJDkK8fb/16S/3ToeV+W5M+TPOs8r/cxl2P+TTm4y8QHczB9e914+1uSfGi8/bcybpT0sdBj\n7jxfwDHPQZ/gB5P8YZIPJ7nr0Oud58s/5s7zBRzzI89/aT6/2d15vvxjPtV5blFcAIAe67oMCgDA\nKYQ1AIAeE9YAAHpMWAMA6DFhDQCgx4Q1AIAeE9YAAHpMWAMA6LH/D9UK+Vwd+xXaAAAAAElFTkSu\nQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x115efc950>"
+       "<matplotlib.figure.Figure at 0x1133d1a90>"
       ]
      },
      "metadata": {},
@@ -605,12 +605,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "from ipywidgets import interact\n",
+    "import pickle\n",
+    "\n",
+    "stepping_tuple = (0,100,1) #start, end, step\n",
+    "F = lambda strength: plot_roots(retrieve_roots[strength])\n",
+    "\n",
+    "def plot_roots(roots):\n",
+    "    plt.figure(figsize=(10,10))    \n",
+    "    plt.scatter(np.asarray(roots).real,np.asarray(roots).imag)\n",
+    "    plt.show()\n",
+    "\n",
     "with open('scatterplots/100_roots.pickle', 'rb') as handle:\n",
     "  retrieve_roots = pickle.load(handle)\n"
    ]
@@ -645,32 +656,32 @@
   },
   "widgets": {
    "state": {
-    "3146151f769b457d836735c122dcf026": {
+    "330733cf6a9a49eca76827f900f0629e": {
      "views": []
     },
-    "3298b5326e744466b068d5123e6cda8d": {
-     "views": []
-    },
-    "4ad81f4dd50d42168ad12ddeb3a4ddfb": {
-     "views": []
-    },
-    "9c174e7278c4436e9589c77876a64787": {
-     "views": []
-    },
-    "aa46d29f6eef4331a07b62a0397d07c7": {
-     "views": []
-    },
-    "ac98990331c34a3a815881329871e6da": {
+    "36498be57e7d408ca8241386b9414591": {
      "views": [
       {
        "cell_index": 31
       }
      ]
     },
-    "cd6ddaa262f1499abbc33574f28e6c8d": {
+    "678c72100da9482db3b11236c4f01c09": {
      "views": []
     },
-    "ce2c0df39fee453f84c9c8cabd1a8fd2": {
+    "74eb578e717240e29ff484a3322e8e60": {
+     "views": []
+    },
+    "c4521cee1c8f49e8bb09c98e1e6bc0c6": {
+     "views": []
+    },
+    "d1eddf8c08d5419695369cfee19a66b5": {
+     "views": []
+    },
+    "dcadd29dc5b145d1b01543039ee9a6eb": {
+     "views": []
+    },
+    "e58f1de07b104b71ad76bca4a8a00931": {
      "views": []
     }
    },
