added notebook showing two approaches for finding phase-matching condition for chi-3 nonlinearities

--- a/graph_to_matrices.ipynb
+++ b/graph_to_matrices.ipynb
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     "import networkx as nx\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from numpy import linalg as la"
    ]
   },
   {
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 333,
    "metadata": {
     "collapsed": false
    },
@@ -92,19 +93,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 334,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "rs = np.asarray([0.9,0.5,0.9]) ## some sample values \n",
+    "rs = np.asarray([0.9,0.5,0.8]) ## some sample values \n",
     "ts = np.sqrt(1.-rs**2) ## ts are determined from rs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 335,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 405,
    "metadata": {
     "collapsed": false
    },
@@ -124,13 +125,13 @@
     "for i in range(N):  ## make the input and output nodes\n",
     "    G.add_node(i*2,label='x_in_'+str(i))\n",
     "    G.add_node(i*2+1,label='x_out_'+str(i))\n",
-    "for i,r in enumerate(rs): ## make the remaining nodes\n",
+    "for i,(r,t) in enumerate(zip(rs,ts)): ## make the remaining nodes\n",
     "    G.add_node(2*N+i,label='x_'+str(i),M=np.matrix([[t,-r],[r,t]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 406,
    "metadata": {
     "collapsed": false
    },
@@ -144,13 +145,13 @@
        " (3, {'label': 'x_out_1'}),\n",
        " (4, {'M': matrix([[ 0.43588989, -0.9       ],\n",
        "           [ 0.9       ,  0.43588989]]), 'label': 'x_0'}),\n",
-       " (5, {'M': matrix([[ 0.43588989, -0.5       ],\n",
-       "           [ 0.5       ,  0.43588989]]), 'label': 'x_1'}),\n",
-       " (6, {'M': matrix([[ 0.43588989, -0.9       ],\n",
-       "           [ 0.9       ,  0.43588989]]), 'label': 'x_2'})]"
+       " (5, {'M': matrix([[ 0.8660254, -0.5      ],\n",
+       "           [ 0.5      ,  0.8660254]]), 'label': 'x_1'}),\n",
+       " (6, {'M': matrix([[ 0.6, -0.8],\n",
+       "           [ 0.8,  0.6]]), 'label': 'x_2'})]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 406,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 407,
    "metadata": {
     "collapsed": false
    },
@@ -182,11 +183,11 @@
    "source": [
     "## edges to inputs\n",
     "G.add_edge(0,4,delay=0.,indices=(0,0),theta=0.,edge_type = 'input',edge_num=0)\n",
-    "G.add_edge(2,6,delay=0.,indices=(0,0),theta=0.,edge_type = 'input',edge_num=1)\n",
+    "G.add_edge(2,6,delay=0.,indices=(0,1),theta=0.,edge_type = 'input',edge_num=1)\n",
     "\n",
     "## edges to outputs\n",
     "G.add_edge(4,1,delay=0.,indices=(1,0),theta=0.,edge_type = 'output',edge_num=2)\n",
-    "G.add_edge(6,3,delay=0.,indices=(1,0),theta=0.,edge_type = 'output',edge_num=3)\n",
+    "G.add_edge(6,3,delay=0.,indices=(0,0),theta=0.,edge_type = 'output',edge_num=3)\n",
     "\n",
     "## internal edges\n",
     "G.add_edge(4,5,delay=1.,indices=(0,0),theta=0.,edge_type = 'internal',edge_num=4)\n",
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 408,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +218,7 @@
        "  {'delay': 0.0,\n",
        "   'edge_num': 1,\n",
        "   'edge_type': 'input',\n",
-       "   'indices': (0, 0),\n",
+       "   'indices': (0, 1),\n",
        "   'theta': 0.0}),\n",
        " (4,\n",
        "  1,\n",
@@ -252,7 +253,7 @@
        "  {'delay': 0.0,\n",
        "   'edge_num': 3,\n",
        "   'edge_type': 'output',\n",
-       "   'indices': (1, 0),\n",
+       "   'indices': (0, 0),\n",
        "   'theta': 0.0}),\n",
        " (6,\n",
        "  5,\n",
@@ -263,7 +264,7 @@
        "   'theta': 0.0})]"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 408,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 409,
    "metadata": {
     "collapsed": false
    },
@@ -289,7 +290,179 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO (Gil): Convert the network of nodes and edges to the framework used in the paper. This would take the graph structure above and generate matrices $M1,M2,M2,M3$ in the notation used in `Potapov_Code.Time_Delay_Network.py`. This would allow generating an instance of Time_Delay_Network."
+    "# Convert the network of nodes and edges to the framework used in the paper. \n",
+    "\n",
+    "This would take the graph structure above and generate matrices $M1,M2,M2,M3$ in the notation used in `Potapov_Code.Time_Delay_Network.py`. This would allow generating an instance of Time_Delay_Network."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 410,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "internal_edges = {(edge[0],edge[1]):edge[2] for edge in G.edges(data=True) if edge[2]['edge_type'] == 'internal'}\n",
+    "m = len(internal_edges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 411,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# input_edges = [edge for edge in G.edges(data=True) if edge[2]['edge_type'] == 'input']\n",
+    "# output_edges = [edge for edge in G.edges(data=True) if edge[2]['edge_type'] == 'output']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 440,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "M1 = np.zeros((m,m))\n",
+    "internal_node_range = range(2*N,num_nodes)\n",
+    "internal_connections = []\n",
+    "for i in internal_node_range: ## internal nodes\n",
+    "    outgoing_connections = nx.edges(G,[i])\n",
+    "    internal_connections += [connection for connection in outgoing_connections if connection[1] in internal_node_range]\n",
+    "\n",
+    "for i in internal_connections:\n",
+    "    for j in internal_connections:\n",
+    "        if i[1] == j[0]:\n",
+    "            matrix_indices = G.edge[i[0]][i[1]]['indices'][0], G.edge[j[0]][j[1]]['indices'][1]\n",
+    "            M1[internal_edges[j]['edge_num']-2*N,internal_edges[i]['edge_num']-2*N] = G.node[i[1]]['M'][matrix_indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.       ,  0.9      ,  0.       ,  0.       ],\n",
+       "       [-0.5      ,  0.       ,  0.       ,  0.8660254],\n",
+       "       [ 0.8660254,  0.       ,  0.       ,  0.5      ],\n",
+       "       [ 0.       ,  0.       , -0.8      ,  0.       ]])"
+      ]
+     },
+     "execution_count": 441,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 429,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "all_connections = []\n",
+    "for i in range(num_nodes): ## internal nodes\n",
+    "    outgoing_connections = nx.edges(G,[i])\n",
+    "    all_connections += [connection for connection in outgoing_connections if connection[1] in range(num_nodes)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 456,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "all_edges = {(edge[0],edge[1]):edge[2] for edge in G.edges(data=True)}\n",
+    "m_all = len(all_edges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 457,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "U = np.zeros((m_all,m_all))\n",
+    "\n",
+    "for i in all_connections:\n",
+    "    for j in all_connections:\n",
+    "        if i[1] == j[0]:\n",
+    "            matrix_indices = G.edge[i[0]][i[1]]['indices'][0], G.edge[j[0]][j[1]]['indices'][1]\n",
+    "            U[all_edges[j]['edge_num'],all_edges[i]['edge_num']] = G.node[i[1]]['M'][matrix_indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 463,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0. ,  0.6,  0. ,  0. ,  0. ,  0. ,  0.6,  0. ])"
+      ]
+     },
+     "execution_count": 463,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 447,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.       ,  0.9      ,  0.       ,  0.       ],\n",
+       "       [-0.5      ,  0.       ,  0.       ,  0.8660254],\n",
+       "       [ 0.8660254,  0.       ,  0.       ,  0.5      ],\n",
+       "       [ 0.       ,  0.       , -0.8      ,  0.       ]])"
+      ]
+     },
+     "execution_count": 447,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## should coincide with M1\n",
+    "\n",
+    "U[4:8,4:8]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Usage Description"
    ]
   },
   {
