updated chi-2 Newton method function notebook and added a notebook for tracing solutions for chi-3 using Newton method.

--- a/Dispersion_relation_two_approaches.ipynb
+++ b/Dispersion_relation_two_approaches.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solving phase and frequency matching conditions computationally\n",
+    "# Solving phase and frequency matching conditions for $\\chi^{(3)}$  computationally\n",
     "\n",
     "Here, we use two similar approaches to find a set of solutions for a set of equations representing the restrictions on the frequencies for which nonlinear interaction occurs. These solutions may include several surfaces as solutions."
    ]
