debugged and added tests for make_weight_keys with keyword search_voxels

--- a/Dispersion_relation_chi_2_voxels_approach.ipynb
+++ b/Dispersion_relation_chi_2_voxels_approach.ipynb
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 384,
    "metadata": {
     "collapsed": false
    },
@@ -1817,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 385,
    "metadata": {
     "collapsed": false
    },
@@ -1832,7 +1832,7 @@
        "2265"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1843,22 +1843,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 386,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAACgAAAAPBAMAAABkeZDQAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAMpndu3bvImbNiRBU\nq0Qb3U6NAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAnUlEQVQYGWNgYGAQAmI4UbXKB8RlMEEi2BUY\nzjcA+awpSATrHwZ+AyC/YgoSwZfHsH8CkL8AJIggwNo5CoCCCIKB2wqoZisDUBBBsC/WBmkECSII\nBoZlDxh4BICCCAKoii2bYRcDUBBBsBcwsPxhOHv37rerCIL/N0gQCECOhxFsDgzM30H8L0gERwPD\n+QAgf8n/G0jEIyU/kBpMAACfmUPdKPLg8QAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAACcAAAAOBAMAAABeLhj4AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAzXYQMplU74mrIma7\nRN0SDTw+AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAA90lEQVQYGS2OsUoDQRCGv3ODmjUGW6ucqIU2\nrpWl+wRGC+UQJPsGQbBKdYpFgsXF4rA0IGJ7pIlgEVtBxDcQWystBBVlnY1OMzMf///PEM2XdlDJ\ntWUjb7dTlXR6MOF9SuTUC0PvfXet0C2IOsswgEN2ocwZ5KFL3UHTpHDMG2T/8BOeHEzH6htWLOWb\nRaveBcZQgX1RPlIx+kd/QF3cJyNvrUDqQYtSoHqVu/F45gJsXPzZx2Zk6S9kltMQIoeajuptkHBu\nQnLD3MPQsN4dwVnYhOfw/JbEyjzolb7gkqkWVacOJEHgnFktQCe5QR0tWbhyMLm9B7/AY0Plhb57\nZgAAAABJRU5ErkJggg==\n",
       "text/latex": [
-       "$$4443$$"
+       "$$5079$$"
       ],
       "text/plain": [
-       "4443"
+       "5079"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1954,6 +1954,28 @@
    ],
    "source": [
     "pos_nus_lst[sample_indices[0]]+pos_nus_lst[sample_indices[1]] - pos_nus_lst[sample_indices[2]] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 395,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], shape=(0, 0), dtype=float64)"
+      ]
+     },
+     "execution_count": 395,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros((0,0))"
    ]
   },
   {
