added phase_matching.py for chi2 phase matching and phase_matching_hash.py for efficient chi3 phase matching. added a method in Hamiltonian to utilize these. Added test cases.

--- a/Dispersion_relation_chi_2_voxels_approach.ipynb
+++ b/Dispersion_relation_chi_2_voxels_approach.ipynb
@@ -1980,6 +1980,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 401,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAHcAAAAUBAMAAABFd79NAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAIma7zZnddlTvRIkQ\nqzLsm4+cAAAACXBIWXMAAA7EAAAOxAGVKw4bAAABAklEQVQ4EWNgYFRgIAsognQJk6WVgYFXAKjR\nEYg7D2CagE0MpopjDgMDjwMDA1MAA8/V+xiasYnBtDKcjf0DZG9nYGAD2V6PoRm7GEw7O0jzSQYG\nMZAAWZpZFjCUkq2ZNYDBiGzNTA4MGWRr5khgmEWC5iNpIODHwAAOML4PJGkG2QMGMM3kO5srgbIA\n2wpyBzCeeb5AXAQnsYnBJMHOZt3AsAwoEDvfV4Eh7QBMCkxjE4MpYL355RIDA8sDSPIEiXKA0ika\nwCYGVwJMm8CMAQHccFEEA5sYXBaYMRgMobzjcFEEA5sYTBaUJeGFgQJMFInGJgaTZgZ5k1EBSJAB\ngMUQAK6rS4CB2esmAAAAAElFTkSuQmCC\n",
+      "text/latex": [
+       "$$\\left ( 1, \\quad 1, \\quad -1\\right )$$"
+      ],
+      "text/plain": [
+       "(1, 1, -1)"
+      ]
+     },
+     "execution_count": 401,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple(map(lambda z: int(np.sign(z)),(4.5,5.5,-3.4)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 402,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAACMAAAAPBAMAAACcmWsnAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAEJmJZjLNVN0i77ur\nRHZ72Yd1AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAl0lEQVQYGWNgEDIxZQABGA1kpjNITAAJQegq\nAQYGlgUMzAlAETDNeOg8UIj7AAP7R6AQlH4PFOI/wMD7HSgEpUFC8goMvP+AQlAaJDTfgIH1M1AI\nSoOFFKBCEBqHRqCx7FDjQTRIFfcGBhawIyA0SAjoRKYEoPFQGiTE0M4gFcD4DUJDNDIIvzvKwNDD\nAKF11uc4AJWhAwCcHDYT04/v5wAAAABJRU5ErkJggg==\n",
+      "text/latex": [
+       "$$0.01$$"
+      ],
+      "text/plain": [
+       "0.01"
+      ]
+     },
+     "execution_count": 402,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1e-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 440,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def make_dict_values_to_lists_of_inputs(values,inputs):\n",
+    "    '''\n",
+    "    Make a dictionary mapping value to lists of corresponding inputs.\n",
+    "\n",
+    "    Args:\n",
+    "        values (list of floats):\n",
+    "            Values in a list, corresponding to the inputs.\n",
+    "        inputs (list of floats):\n",
+    "            Inputs in a list.\n",
+    "\n",
+    "    Returns:\n",
+    "        D (dict):\n",
+    "            dictionary mapping value to lists of corresponding inputs.\n",
+    "    '''\n",
+    "    D = {}\n",
+    "    for k, v in zip(values,inputs):\n",
+    "        if not math.isnan(k):\n",
+    "            D.setdefault(k, []).append(v)\n",
+    "    return D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAOoAAAAVBAMAAAC6fm+xAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAZpkQ3Ynvq81UMrtE\nInZCK3CHAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAC6UlEQVRIDb1WTWgTQRh922STps1u05vHGBER\nD83Bn1sNGrGo2KBGDw1YUIrYilqFerJBlIIeGjzUk3TJ1YsHL6Lg4iHnWOxRKLZXqWIVi9U430x2\nZvYnISfnsPP9vHlvv29mlgVg7Mb/HPV1UoudCGraYw6Fdp0JJkL+xmMKGQ/dUCYQ0CkbDksaXwGr\nPFFTONMVdkWFNKuu2RVYuTcOvAVaBv3rA/uVzxCr5dcAUfZV2cOcBFaQ+sbM9iCSpbyAeDE1n1Ym\nIzkCcydSNdFqlRTSdK0sljNc1SywOKlu1rClQ2Kz851U7WkFZCR3gKlI1f5LXzSg6drbGCoIVSbI\nVRtu7JfCUK2bnVQ/PFFARnIVmHeiOpzUYEzETc/gaNWvilCHO6qW/KqL+R5V2Ut4HZ5kNnUYOMg3\nIX6L7G61Gk2hepKA/NUxno+sdfizQxBFSZeFThMXTFaZtXqMdRQ4THZX1VFw1dg1AnKS9A++gPva\nYzBv7ZArKa0Le8QCujRYcihpztBTjG61loRqG0mvzoqJqpVlXrVRbOKIi65ozgPgxXWRm+LFcruL\nasoJqebanErCs0aaniVUE1eEavIs0HCAT8C7mg/S4TQdQlDVzkar3gMuuxql1cTgtlBdYOFkFWjl\ne1R9Njf3877kIpKnsJq8fyrKLbbxI3r7hr57qnxfzQIwDYz729GhVkbIsHJUMJCFHamaBcYkjnU4\n8RLxP7xWfobpMYzUX4LIAye/EvrXQ5D8pkme4Y/lc3fFrrFvgD5WYNwg36M0Mlhe86umcwdcgsjL\nte/mgvhooqjaRAhMtG7T5N3XxVZrS6jGj1NcDmvvLF8pKd/n3oqbI2uVWG5420T3AinVeT+KPI7w\nTtPzcF5GdMpeVE25MsLwqZYiAF4opMqPlJflsw7BqC8VcHTV2Fogqbs6ZV+VMo/0NNk6BJlgVvd1\nVUNPBG2dsuFSNhX8b7KLDsU3eviDOUVAu+jS1G1olPXzwD+2w88gWgfsUgAAAABJRU5ErkJggg==\n",
+      "text/latex": [
+       "$$\\left \\{ 3 : \\left [ 1\\right ], \\quad 4 : \\left [ 2\\right ], \\quad 5 : \\left [ 3\\right ]\\right \\}$$"
+      ],
+      "text/plain": [
+       "{3: [1], 4: [2], 5: [3]}"
+      ]
+     },
+     "execution_count": 441,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_dict_values_to_lists_of_inputs([float('NaN'),3,4,5],[1,1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 432,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 432,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.isnan(float('NaN'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
