added phase_matching.py file

--- a/perturbing_z.ipynb
+++ b/perturbing_z.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Usage for perturbation due to different time delays (i.e. dispersion).\n",
+    "\n",
+    "## The goal is to generate a function of the old roots and changes of the time delays ($\\Delta T$'s) due to nonlinear effects that can be minimized to find the new roots. The new roots are assumed to be sufficiently close to the old roots."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -53,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  One approach to perturbing the roots is to define a cost function in terms of real variables and minimize. This is done in Time_Delay_Network.get_minimizing_function_z and Hamiltonian.minimize_roots_z"
+    "##  One approach to perturbing the roots is to define a cost function in terms of real variables and minimize. This is done in Time_Delay_Network.get_minimizing_function_z and Hamiltonian.minimize_roots_z"
    ]
   },
   {
@@ -178,59 +187,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": [
-    "\n",
-    "#plt.scatter(np.asarray(ham.roots).real,np.asarray(ham.roots).imag)\n",
-    "#plt.show()"
+    "## Note: This does not always work so well! Instead, let's try using Newton's method below."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using Newton's method instead"
+    "# Using Newton's method instead. This appears to work much better. See the widget below"
    ]
   },
   {
@@ -709,24 +678,7 @@
    "version": "2.7.12"
   },
   "widgets": {
-   "state": {
-    "27cb547d17de4deea0eb457fbd5502e8": {
-     "views": []
-    },
-    "2bfa88628f6b4482b698ac4e8c9a9302": {
-     "views": [
-      {
-       "cell_index": 31
-      }
-     ]
-    },
-    "bdfbc1b9d66b400fa010783489166f44": {
-     "views": []
-    },
-    "f77e528f0fe94c4d856957b6567716c5": {
-     "views": []
-    }
-   },
+   "state": {},
    "version": "1.1.2"
   }
  },
