--- a/graph_to_matrices.ipynb
+++ b/graph_to_matrices.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -151,13 +151,24 @@
        "           [ 0.8,  0.6]]), 'label': 'x_2'})]"
       ]
      },
-     "execution_count": 406,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "G.nodes(data=True) ## display the nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "num_nodes = len(G.nodes(data=True))"
    ]
   },
   {
@@ -175,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -198,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -264,7 +275,7 @@
        "   'theta': 0.0})]"
       ]
      },
-     "execution_count": 408,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -297,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -309,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -321,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -343,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -357,7 +368,7 @@
        "       [ 0.       ,  0.       , -0.8      ,  0.       ]])"
       ]
      },
-     "execution_count": 441,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -382,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -394,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -411,51 +422,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0. ,  0.6,  0. ,  0. ,  0. ,  0. ,  0.6,  0. ])"
-      ]
-     },
-     "execution_count": 463,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "U[3]"
+    "## should coincide with M1\n",
+    "\n",
+    "M1 = U[4:8,4:8]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.       ,  0.9      ,  0.       ,  0.       ],\n",
-       "       [-0.5      ,  0.       ,  0.       ,  0.8660254],\n",
-       "       [ 0.8660254,  0.       ,  0.       ,  0.5      ],\n",
-       "       [ 0.       ,  0.       , -0.8      ,  0.       ]])"
-      ]
-     },
-     "execution_count": 447,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "## should coincide with M1\n",
-    "\n",
-    "U[4:8,4:8]"
+    "M4 = U[:4,:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "M3 = U[8:16,4:8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "M4 = U[8:16,8:16]"
    ]
   },
   {
